# course_project_3

./: README.md  pyproject.toml
src/: code.py  utils.py
tests/: teat_get_formatted_date.py  test_get_filtered_list.py  test_get_formatted_data_str.py  test_get_operations_list.py  test_get_operations_output.py  test_get_sorted_list.py  test_hide_number.py
