[tool.poetry]
name = "course-"
version = "0.1.0"
description = ""
authors = ["olga voronets <voronets80@gmail.com>"]
readme = "README.md"
packages = [{include = "course_"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
